<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_component_chat"
        android:textAppearance="@style/TextAppearance.Bremo.SectionTitle" />
    <noox.bzr.design.views.ChatBubbleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bremoText="@string/chat_sent"
        app:bremoSent="true" />
    <noox.bzr.design.views.ChatBubbleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bremoText="@string/chat_received"
        app:bremoSent="false" />
    <noox.bzr.design.views.ChatBubbleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bremoText="@string/media_photo"
        app:bremoSent="false"
        app:chatKind="image" />
    <noox.bzr.design.views.ChatBubbleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bremoText="@string/chat_blocked"
        app:bremoSent="false"
        app:chatKind="blocked" />
    <noox.bzr.design.views.ChatInputView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bremoPlaceholder="@string/chat_placeholder" />
</merge>
