<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_component_app_top_bar"
        android:textAppearance="@style/TextAppearance.Bremo.SectionTitle" />
    <noox.bzr.design.views.AppTopBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bremoTitle="@string/summary_title"
        app:actionIcon="@drawable/ic_edit"
        app:actionLabel="@string/a11y_edit" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery_component_navigation"
        android:textAppearance="@style/TextAppearance.Bremo.SectionTitle" />
    <noox.bzr.design.views.BottomNavView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <noox.bzr.design.views.DrawerMenuView
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</merge>
